frontend/test/should_fail/attrib_082.grg
using attrib_model_001;

rule r {
	ni : NINT;
	nb : NBOOL;
	nf : NFLOAT;
	nd : NDOUBLE;
	ns : NSTRING;
	-ei:EINT->;
	-eb:EBOOL->;
	-ef:EFLOAT->;
	-ed:EDOUBLE->;
	-es:ESTRING->;

	modify {
		eval {
			nb.a = nb.a % eb.a;
		}
	}
}

